# gravitas

./: .gitignore  CMakeLists.txt  README.md
src/: 3d_utils.cpp  3d_utils.h  bitmap_font.cpp  bitmap_font.h  bitmap_font_atlas.cpp  bitmap_font_atlas.h  core.h  frame_buffer.cpp  frame_buffer.h  iss_data.cpp  iss_data.h  main.cpp  opengl_debug.h  orbital_body.cpp  orbital_body.h  orbital_solver.cpp  orbital_solver.h  pch.h  renderer.cpp  renderer.h  trajectory_display.cpp  trajectory_display.h
src/core/: camera.cpp  camera.h  entity3d.cpp  entity3d.h  mesh_object.cpp  mesh_object.h  polyline_object.cpp  polyline_object.h  scene_background.cpp  scene_background.h  shader.cpp  shader.h  texture.cpp  timer.cpp  timer.h
src/res/shaders/: screen_shader.frag  screen_shader.vert
vcpkg/installed/vcpkg/: status
